# Semantic_Search_Engine

./: README.md  Semantic_Search_Engine_Presentation.pptx  app.py  final_eval copy.ipynb  hnsw_retrieval.ipynb  pyproject.toml  train.ipynb
Friends/: README.md  main.py  pipeline.txt  requirements.txt  retrieval_engine.py  streamlit_app.py
img/: final_eval_results.csv
my_algos/: hnsw.cpp  hnsw_bind.cpp  hnsw_index.cp310-win_amd64.pyd  hnsw_retriever.py  setup.py
